<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeTicketFragment"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_ticket_title"
                android:layout_marginTop="16dp"
                style="@style/StyleTextHeaderField"/>
            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_ticket_name"
                android:layout_marginTop="16dp"
                style="@style/StyleTextHeaderField"/>
            <EditText
                android:id="@+id/responsible_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_ticket_team"
                android:layout_marginTop="16dp"
                style="@style/StyleTextHeaderField"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/team_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sin equipo responsable "
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="16dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="Elegir un equipo"
                    android:maxLines="2"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_ticket_incident"
                android:layout_marginTop="16dp"
                style="@style/StyleTextHeaderField"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/incident_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sin equipo responsable "
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="16dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="Elegir tipo de incidencia"
                    android:maxLines="2"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_ticket_several"
                android:layout_marginTop="16dp"
                style="@style/StyleTextHeaderField"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/several_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sin equipo responsable "
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="16dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="Elegir gravedad"
                    android:maxLines="2"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_ticket_version"
                android:layout_marginTop="16dp"
                style="@style/StyleTextHeaderField"/>
            <EditText
                android:id="@+id/version_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_ticket_description"
                android:layout_marginTop="16dp"
                style="@style/StyleTextHeaderField"/>
            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_ticket_multimedia"
                android:layout_marginTop="16dp"
                style="@style/StyleTextHeaderField"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginHorizontal="25dp"
                android:text="Elegir archivos"
                android:maxLines="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_ticket_notice"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/submit_ticket_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="Crear Ticket"
                    android:layout_marginEnd="8dp"
                    android:maxLines="2"/>
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="Cancelar"
                    android:maxLines="2"
                    android:backgroundTint="?attr/colorPrimaryVariant"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>